delete class name

--- a/submissions/Eugene50/popup-menu/index.html
+++ b/submissions/Eugene50/popup-menu/index.html
@@ -16,7 +16,7 @@
             <img class="menu-icon" src="img\menu.png" alt="Menu" height="20" width="20"/>
         </label>
         <div class="menu-item"><a href="#">Music</a></div>
-        <div class="menu-icon-alf"><a href="#"><img class="alf" src="img/alf.jpg" alt="User"></a></div>
+        <div><a href="#"><img class="alf" src="img/alf.jpg" alt="User"></a></div>
 
         <div class="wraper">
             <div class="hidden-container">
