--- a/submissions/krash1408/html5form/index.html
+++ b/submissions/krash1408/html5form/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>This is NOT a google page!</title>
   </head>
   <body>
     <nav class="main-nav">
