added a tag in the head

--- a/submissions/alexdefender/html5-order-form/index.html
+++ b/submissions/alexdefender/html5-order-form/index.html
@@ -7,22 +7,19 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>HTML5 Order Form</title>
   </head>
+
   <body>
     <header class="document__header">
       <nav>
         <ul class="header__nav__items">
-          <label>
           <li class="header__back">
-            <a href="#"><span class="icon link__back"></span><span class="header__back-text">Go back</a>
+            <a class="icon icon__back" href="#">Go back</a>
           </li>
-        </label>
           <li>
             <a href="#"><img src="img/logo.jpg"/></a>
           </li>
           <li class="header__sing-in">
-            <button class="btn" type="button">
-              <span class="icon icon__sing-in"></span>Sing in
-            </button>
+            <a class="icon icon__sing-in" href="#">Sing in</a>
           </li>
         </ul>
       </nav>
