--- a/submissions/CrazyPike/formss/index.html
+++ b/submissions/CrazyPike/formss/index.html
@@ -51,7 +51,7 @@
           <hr class="section-translate__horizontal-line">
         </h2>
         <div class="section-translate__options">
-          <input class="section-translate__input__hidden" type="radio" name="type-for-translate" id="option-web" value="web" required="required" checked="checked">
+          <input class="section-translate__input__hidden" type="radio" name="type-for-translate" id="option-web" value="web" required checked>
           <label class="section-translate__buttons" for="option-web"><img src="img/icon_website.png" alt="Website icon"><span>Web</span></label>
           <input class="section-translate__input__hidden" type="radio" name="type-for-translate" id="option-doc" value="web">
           <label class="section-translate__buttons" for="option-doc"><img src="img/icon_documents.png" alt="Documents icon"><span>Documents</span></label>
@@ -99,18 +99,18 @@
         <div class="section-languages__content-container">
           <div class="section-languages__content">
             <label class="page__uppercase">from</label>
-            <select class="section-languages__select" required="required">
+            <select class="section-languages__select" required>
               <option>Arabic</option>
               <option>Slavic</option>
             </select>
             <div class="section-languages__empty-cell"></div>
             <div class="section-languages__empty-cell"></div>
             <label class="page__uppercase">to</label>
-            <select class="section-languages__select" required="required">
+            <select class="section-languages__select" required>
               <option>English</option>
               <option>Polish</option>
             </select><span>
-              <select class="section-languages__select" required="required">
+              <select class="section-languages__select" required>
                 <option>Ukrainian</option>
                 <option>Polish</option>
               </select>
@@ -124,7 +124,7 @@
           <div class="section__ordinal-number">3</div>
           <h2 class="section__header">Select your desired tone</h2>
           <div class="section-tone__container">
-            <input class="section-tone__buttons__hidden" type="radio" name="tone" id="option-friendly" value="friendly" required="required" checked="checked">
+            <input class="section-tone__buttons__hidden" type="radio" name="tone" id="option-friendly" value="friendly" required checked>
             <label class="section-tone__buttons" for="option-friendly" tabindex="0"><span><img src="img/icon_friendly.png" alt="Friendly icon"><span>Friendly</span></span></label>
             <input class="section-tone__buttons__hidden" type="radio" name="tone" id="option-pro" value="pro">
             <label class="section-tone__buttons" for="option-pro" tabindex="0"><span><img src="img/icon_corp.png" alt="Corporate icon"><span>Corporate</span></span></label>
@@ -140,7 +140,7 @@
               <div class="input-range-end"></div>
               <div class="input-range-end"></div>
             </div>
-            <input type="range" min="0" max="2" value="1" id="form__range" required="required">
+            <input type="range" min="0" max="2" value="1" id="form__range" required>
             <div class="section-urgent__range-label"><span>i got time</span><span>average</span><span>yesterday</span></div>
           </div>
           <div class="section-urgent__description"><img class="form__icons" src="img/icon_info.png" alt="icon info">
@@ -156,21 +156,21 @@
         <div class="form-payment__input-name">
           <div class="form-payment__input">
             <label for="person_name">full name</label>
-            <input type="text" placeholder="Full name" pattern="[0-9A-Za-z. -]+" id="person_name" title="Enter the name" required="required">
+            <input type="text" placeholder="Full name" pattern="[0-9A-Za-z. -]+" id="person_name" title="Enter the name" required>
           </div>
         </div>
         <div class="form-payment__input-email-pass">
           <div class="form-payment__input">
             <label for="person_email">email address</label>
-            <input type="email" placeholder="Email" pattern="[0-9A-Za-z.-]+[@][0-9A-Za-z.-]+[.][0-9A-Za-z.-]+" id="person_email" title="Email address" required="required">
+            <input type="email" placeholder="Email" pattern="[0-9A-Za-z.-]+[@][0-9A-Za-z.-]+[.][0-9A-Za-z.-]+" id="person_email" title="Email address" required>
           </div>
           <div class="form-payment__input">
             <label for="person_pass">password</label>
-            <input type="password" minlength="6" placeholder="Enter password.." id="person_pass" title="Enter password" required="required">
+            <input type="password" minlength="6" placeholder="Enter password.." id="person_pass" title="Enter password" required>
           </div>
         </div>
         <div class="form-payment__option-container">
-          <input class="section-payment__input__hidden" type="radio" name="payment" id="option-card" value="card" required="required" checked="checked">
+          <input class="section-payment__input__hidden" type="radio" name="payment" id="option-card" value="card" required checked>
           <label class="form-payment__option" for="option-card" tabindex="0"><img src="img/icon_cards.png" alt="cards icon"></label>
           <input class="section-payment__input__hidden" type="radio" name="payment" id="option-paypal" value="paypal">
           <label class="form-payment__option" for="option-paypal" tabindex="0"><img src="img/icon_paypal.png" alt="paypal icon"></label>
@@ -180,15 +180,15 @@
         <div class="form-payment__card-info">
           <div class="form-payment__card-input">
             <label for="card_num">card number</label>
-            <input class="form-payment__card-number" type="text" id="card_num" pattern="[0-9]{16}" placeholder="Card number.." minlength="16" maxlength="16" title="Card number must be 16-digit">
+            <input class="form-payment__card-number" type="text" id="card_num" pattern="[0-9]{16}" placeholder="Card number.." minlength="16" maxlength="16" title="Card number must be 16-digit" required>
           </div>
           <div class="form-payment__card-input">
             <label for="card_exp">card expire</label>
-            <input class="form-payment__card-expire" type="text" id="card_exp" placeholder="MM/YY" pattern="[0-9]{2}/[0-9]{2}" title="Format MM/YY">
+            <input class="form-payment__card-expire" type="text" id="card_exp" placeholder="MM/YY" pattern="[0-9]{2}/[0-9]{2}" title="Format MM/YY" required>
           </div>
           <div class="form-payment__card-input">
             <label for="card_cvv">card cvv</label>
-            <input class="form-payment__card-cvv" type="password" id="card_cvv" pattern="[0-9]{3}" placeholder="CVV" minlength="3" maxlength="3" title="CVV mush have 3 digits">
+            <input class="form-payment__card-cvv" type="password" id="card_cvv" pattern="[0-9]{3}" placeholder="CVV" minlength="3" maxlength="3" title="CVV mush have 3 digits" required>
           </div>
         </div>
       </section>
